<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Yongjia Huang, Dichong Song, Mingwei Li, Donglin Han, Long Ma,CMPUT301F17T25 CMPUT301, University of Alberta, All Rights Reserved.
  ~ You may use distribut, or modify this code under terms and conditions of the ode of Student Behavior at University of Alberta
  ~ You may find a copy of the license in this project. Otherwise please contact jajayongjia@gmail.com
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ca.ualberta.cs.opgoaltracker.activity.HabitDetailActivity">


        <TextView
            android:id="@+id/textTitleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_title"
            android:textSize="20sp"
            android:textColor="@color/black_overlay"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/editTitleDetail"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textTitleDetail"
            app:layout_constraintLeft_toLeftOf="@+id/editReasonDetail"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textReasonDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_reason"
            android:textSize="20sp"
            android:textColor="@color/black_overlay"
            app:layout_constraintRight_toLeftOf="@+id/editReasonDetail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textTitleDetail"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/editReasonDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textReasonDetail"
            app:layout_constraintLeft_toRightOf="@+id/textReasonDetail"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textProgressDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/habit_progress"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textReasonDetail" />
        
        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="0dp"
            android:layout_height="368dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textProgressDetail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"></com.github.mikephil.charting.charts.PieChart>

        <TextView
            android:id="@+id/textStartDateDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_start_date"
            android:textSize="20sp"
            android:textColor="@color/black_overlay"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/pieChart"
            android:layout_marginStart="16dp" />

        <CalendarView
            android:id="@+id/calendarViewDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStartDateDetail" />

        <TextView
            android:id="@+id/periodTextDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/habit_period"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarViewDetail"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/checkBoxMonDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxTueDetail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/periodTextDetail" />

        <TextView
            android:id="@+id/textMonDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_mon"
            android:textSize="16sp"
            android:textColor="@color/black_overlay"
            app:layout_constraintRight_toRightOf="@+id/checkBoxMonDetail"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxMonDetail"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxMonDetail" />

        <CheckBox
            android:id="@+id/checkBoxTueDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxWedDetail"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxMonDetail"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxMonDetail" />

        <TextView
            android:id="@+id/textTueDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_tue"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxTueDetail"
            app:layout_constraintRight_toRightOf="@+id/checkBoxTueDetail"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTueDetail" />

        <CheckBox
            android:id="@+id/checkBoxWedDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxThurDetail"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxTueDetail"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxTueDetail" />

        <TextView
            android:id="@+id/textWedDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_wed"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxWedDetail"
            app:layout_constraintRight_toRightOf="@+id/checkBoxWedDetail"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxWedDetail" />

        <CheckBox
            android:id="@+id/checkBoxThurDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxFriDetail"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxWedDetail"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxWedDetail" />

        <TextView
            android:id="@+id/textThurDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_thur"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxThurDetail"
            app:layout_constraintRight_toRightOf="@+id/checkBoxThurDetail"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxThurDetail" />

        <CheckBox
            android:id="@+id/checkBoxFriDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxSatDetail"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxThurDetail"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxThurDetail" />

        <TextView
            android:id="@+id/textFriDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_fri"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxFriDetail"
            app:layout_constraintRight_toRightOf="@+id/checkBoxFriDetail"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFriDetail" />

        <CheckBox
            android:id="@+id/checkBoxSatDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxFriDetail"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxFriDetail"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxSunDetail" />

        <TextView
            android:id="@+id/textSatDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_sat"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxSatDetail"
            app:layout_constraintRight_toRightOf="@+id/checkBoxSatDetail"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSatDetail" />

        <CheckBox
            android:id="@+id/checkBoxSunDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxSatDetail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxSatDetail" />

        <TextView
            android:id="@+id/textSunDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_sun"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxSunDetail"
            app:layout_constraintRight_toRightOf="@+id/checkBoxSunDetail"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSunDetail" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:onClick="buttonSave"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMonDetail" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>