...
  ~ You may find a copy of the license in this project. Otherwise please contact jajayongjia@gmail.com
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/habitAddScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <android.support.constraint.ConstraintLayout
...
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTitleAdd"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textTitleAdd"
            app:layout_constraintLeft_toLeftOf="@+id/editReasonAdd"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textReasonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarViewAdd" />

        <CheckBox
            android:id="@+id/checkBoxMonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxTueAdd"
            app:layout_constraintTop_toBottomOf="@+id/periodTextAdd" />

        <TextView
            android:id="@+id/textMonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxSunAdd"
            app:layout_constraintRight_toRightOf="@+id/checkBoxSunAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSunAdd" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
...
