<!--
  ~ Copyright 2017 Yongjia Huang, Dichong Song, Mingwei Li, Donglin Han, Long Ma,CMPUT301F17T25 CMPUT301, University of Alberta, All Rights Reserved.
  ~ You may use distribut, or modify this code under terms and conditions of the ode of Student Behavior at University of Alberta
  ~ You may find a copy of the license in this project. Otherwise please contact jajayongjia@gmail.com
  -->

<resources>
    <string name="app_name">OPGoalTracker</string>

    <string name="title_activity_register_activity">Register_activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_habit">Habit</string>
    <string name="title_activity_habit_add">Add New Habit Plan</string>
    <string name="habit_title">Title: </string>
    <string name="habit_reason">Reason: </string>
    <string name="habit_start_date">Start Date: </string>
    <string name="habit_period">Period: </string>
    <string name="habit_progress">Progress: </string>
    <string name="habit_mon">Mon.</string>
    <string name="habit_tue">Tue.</string>
    <string name="habit_wed">Wed.</string>
    <string name="habit_thur">Thur.</string>
    <string name="habit_fri">Fri.</string>
    <string name="habit_sat">Sat.</string>
    <string name="habit_sun">Sun.</string>
    <string name="create">Create</string>
    <string name="title_activity_habit_detail">HabitDetailActivity</string>
    <string name="save">Save</string>
    <string name="menu_action_about_us">About us</string>
    <string name="menu_action_setting">Setting</string>
    <string name="action_goto_habit">Habit</string>
    <string name="menu_action_habit">Habit</string>
    <string name="menu_action_habitEvent">HabitEvent</string>
    <string name="action_delete">Delete</string>
    <string name="action_goto_news">News</string>
    <string name="title_activity_menu_page">MenuPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="log_out">LOG OUT</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_delete">Delete Account</string>
    <string name="admin">Admin</string>
    <string name="title_activity_maps">Map</string>
</resources>
